# FractalViewer

./: .gitignore  CMakeLists.txt  FractalViewer.sln  README.md
FractalViewer/: ArialFont.h  Fractal.cpp  Fractal.h  FractalViewer.vcxproj  FractalViewer.vcxproj.filters  Saved experiments.txt  Source.cpp  color_palettes.h  fractalviewer.out  makefile
